Update links to remove leading slashes

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                         <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/join.html">Join</a>
+                        <a class="nav-link" href="join.html">Join</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about.html">About</a>
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item ms-2">
                         <a class="btn btn-gold" href="https://wa.me/27655172764" target="_blank" rel="noopener noreferrer">Join Now</a>
@@ -52,8 +52,8 @@
                         <h1 class="hero-title animate-fade-in">Your Body. Your Discipline.</h1>
                         <h2 class="hero-subtitle animate-fade-in-delayed">Welcome to Elite Health Club.</h2>
                         <div class="mt-4">
-                            <a href="/join.html" class="btn btn-gold btn-lg me-3">Start Your Journey</a>
-                            <a href="/about.html" class="btn btn-outline-gold btn-lg">Learn More</a>
+                            <a href="join.html" class="btn btn-gold btn-lg me-3">Start Your Journey</a>
+                            <a href="about.html" class="btn btn-outline-gold btn-lg">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -69,19 +69,19 @@
     <div class="cylinder-container">
         <div class="cylinder">
             <div class="cylinder-face cylinder-front">
-                <img src="/images/gym-equipment-1.jpg" 
+                <img src="images/gym-equipment-1.jpg" 
                      class="cylinder-img" alt="Elite Gym Equipment">
             </div>
             <div class="cylinder-face cylinder-right">
-                <img src="/images/gym-training-2.jpg" 
+                <img src="images/gym-training-2.jpg" 
                      class="cylinder-img" alt="Professional Training">
             </div>
             <div class="cylinder-face cylinder-back">
-                <img src="/images/gym-space-3.jpg" 
+                <img src="images/gym-space-3.jpg" 
                      class="cylinder-img" alt="Premium Gym Space">
             </div>
             <div class="cylinder-face cylinder-left">
-                <img src="/images/gym-chill-4.jpg" 
+                <img src="images/gym-chill-4.jpg" 
                      class="cylinder-img" alt="Relaxation Area">
             </div>
         </div>
@@ -299,9 +299,9 @@
                 </div>
                 <div class="col-md-6 text-md-end">
                     <p class="mb-0 small">
-                        <a href="/privacy.html" class="text-gold me-3">Privacy Policy</a>
-                        <a href="/terms.html" class="text-gold me-3">Terms of Service</a>
-                        <span class="text-muted">Site by ThingsDoneImmediately.xyz</span>
+                        <a href="privacy.html" class="text-gold me-3">Privacy Policy</a>
+                        <a href="terms.html" class="text-gold me-3">Terms of Service</a>
+                        <span class="text-muted">Site by www.ThingsDoneImmediately.com</span>
                     </p>
                 </div>
             </div>
