--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/site.css">
+    <style>
+        .membership-section {
+            background: linear-gradient(rgba(5, 5, 5, 0.70), transparent), url('images/gym-main.jpg');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+        }
+    </style>
 </head>
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top custom-navbar">
         <div class="container">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="index.html">
                 <img src="images/elite-logo.png" alt="Elite Health Club" class="logo-img">
                 <span class="logo-text">ELITE HEALTH CLUB</span>
             </a>
@@ -23,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="join.html">Join</a>
@@ -64,29 +72,29 @@
         <section class="py-5 bg-transparent">
             <div class="container">
                 <div class="row align-items-center">
-                <!-- 3D Cylinder Gallery Side -->
-<div class="col-lg-6 mb-4 mb-lg-0">
-    <div class="cylinder-container">
-        <div class="cylinder">
-            <div class="cylinder-face cylinder-front">
-                <img src="images/gym-equipment-1.jpg" 
-                     class="cylinder-img" alt="Elite Gym Equipment">
-            </div>
-            <div class="cylinder-face cylinder-right">
-                <img src="images/gym-training-2.jpg" 
-                     class="cylinder-img" alt="Professional Training">
-            </div>
-            <div class="cylinder-face cylinder-back">
-                <img src="images/gym-space-3.jpg" 
-                     class="cylinder-img" alt="Premium Gym Space">
-            </div>
-            <div class="cylinder-face cylinder-left">
-                <img src="images/gym-chill-4.jpg" 
-                     class="cylinder-img" alt="Relaxation Area">
-            </div>
-        </div>
-    </div>
-</div>
+                    <!-- 3D Cylinder Gallery Side -->
+                    <div class="col-lg-6 mb-4 mb-lg-0">
+                        <div class="cylinder-container">
+                            <div class="cylinder">
+                                <div class="cylinder-face cylinder-front">
+                                    <img src="images/gym-equipment-1.jpg" 
+                                         class="cylinder-img" alt="Elite Gym Equipment">
+                                </div>
+                                <div class="cylinder-face cylinder-right">
+                                    <img src="images/gym-training-2.jpg" 
+                                         class="cylinder-img" alt="Professional Training">
+                                </div>
+                                <div class="cylinder-face cylinder-back">
+                                    <img src="images/gym-space-3.jpg" 
+                                         class="cylinder-img" alt="Premium Gym Space">
+                                </div>
+                                <div class="cylinder-face cylinder-left">
+                                    <img src="images/gym-chill-4.jpg" 
+                                         class="cylinder-img" alt="Relaxation Area">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     
                     <!-- Quotes Side -->
                     <div class="col-lg-6">
