--- a/index.html
+++ b/index.html
@@ -42,7 +42,14 @@
             </div>
         </div>
     </nav>
-
+<style>
+    .membership-section {
+        background: linear-gradient(rgba(5, 5, 5, 0.70), transparent), url('images/gym-main.jpg');
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+    }
+</style>
     <!-- Main Content -->
     <main role="main">
         <!-- Hero Section -->
