--- a/index.html
+++ b/index.html
@@ -117,20 +117,19 @@
             </div>
         </section>
 
-        <!-- Membership Invite Section -->
-        <!-- CHANGED: Remove membership-section class and use bg-transparent instead -->
-        <section id="membership" class="py-5 bg-transparent">
-            <div class="container">
-                <div class="row justify-content-center text-center">
-                    <div class="col-lg-8">
-                        <h2 class="section-title mb-4">Become Part of the Elite Family</h2>
-                        <a href="https://wa.me/27655172764" class="btn btn-gold btn-lg" target="_blank" rel="noopener noreferrer">
-                            <i class="fab fa-whatsapp me-2"></i>Start Your Membership
-                        </a>
-                    </div>
-                </div>
+ <!-- Membership Invite Section -->
+<section id="membership" class="membership-section py-5">
+    <div class="container">
+        <div class="row justify-content-center text-center">
+            <div class="col-lg-8">
+                <h2 class="section-title mb-4">Become Part of the Elite Family</h2>
+                <a href="https://wa.me/27655172764" class="btn btn-gold btn-lg" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-whatsapp me-2"></i>Start Your Membership
+                </a>
             </div>
-        </section>
+        </div>
+    </div>
+</section>
 
         <!-- ... REST OF YOUR CODE REMAINS EXACTLY THE SAME ... -->
 
