--- a/index.html
+++ b/index.html
@@ -42,14 +42,7 @@
             </div>
         </div>
     </nav>
-<style>
-    .membership-section {
-        background: linear-gradient(rgba(5, 5, 5, 0.70), transparent), url('images/gym-main.jpg');
-        background-size: cover;
-        background-position: center;
-        background-attachment: fixed;
-    }
-</style>
+
     <!-- Main Content -->
     <main role="main">
         <!-- Hero Section -->
@@ -118,7 +111,7 @@
         </section>
 
  <!-- Membership Invite Section -->
-<section id="membership" class="membership-section py-5">
+<section id="membership" class="py-5 bg-transparent">
     <div class="container">
         <div class="row justify-content-center text-center">
             <div class="col-lg-8">
