--- a/join.html
+++ b/join.html
@@ -20,6 +20,15 @@
             margin-top: -80px;
         }
 
+        /* Force dark background on join page */
+    body {
+        background: #000000 !important;
+    }
+    
+    /* Make sure all sections are transparent */
+    section, .membership-plan, .hours-card, .day-pass-card {
+        background: transparent !important;
+
         .membership-plan {
             background: var(--darker-bg);
             border: 2px solid rgba(212, 175, 55, 0.3);
