--- a/join.html
+++ b/join.html
@@ -204,16 +204,16 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="join-hero-section">
-        <div class="container">
-            <div class="row justify-content-center text-center">
-                <div class="col-lg-8">
-                    <h1 class="hero-title">Official Membership Plans</h1>
-                    <p class="hero-subtitle">Transparent pricing. No surprises.</p>
-                </div>
+<section class="join-hero-section" style="padding-top: 100px;">
+    <div class="container">
+        <div class="row justify-content-center text-center">
+            <div class="col-lg-8">
+                <h1 class="hero-title" style="margin-top: 2rem;">Official Membership Plans</h1>
+                <p class="hero-subtitle">Transparent pricing. No surprises.</p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Membership Plans Section -->
     <section class="py-5 bg-transparent">
