--- a/join.html
+++ b/join.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="css/site.css">
     <style>
         .join-hero-section {
-            height: 40vh; /* REDUCED HEIGHT */
+            height: 50vh; /* INCREASED HEIGHT SO TEXT ISN'T CUT OFF */
             background: linear-gradient(rgba(5, 5, 5, 0.70), rgba(5, 5, 5, 0.70)), url('images/gym-main.jpg');
             background-size: cover;
             background-position: center;
             display: flex;
             align-items: center;
             margin-top: -80px;
-            padding-top: 100px; /* ADDED PADDING */
+            padding-top: 120px; /* INCREASED PADDING TO PUSH CONTENT DOWN */
         }
 
         .membership-plan {
@@ -146,8 +146,8 @@
 
         @media (max-width: 768px) {
             .join-hero-section {
-                height: 35vh; /* EVEN SMALLER ON MOBILE */
-                padding-top: 80px;
+                height: 45vh; /* ADJUSTED FOR MOBILE */
+                padding-top: 100px;
             }
             
             .membership-plan {
@@ -204,7 +204,7 @@
         <div class="container">
             <div class="row justify-content-center text-center">
                 <div class="col-lg-8">
-                    <h1 class="hero-title">Official Membership Plans</h1>
+                    <h1 class="hero-title" style="margin-top: 2rem;">Official Membership Plans</h1>
                     <p class="hero-subtitle">Transparent pricing. No surprises.</p>
                 </div>
             </div>
