--- a/index.html
+++ b/index.html
@@ -303,13 +303,13 @@
                     <h5 class="footer-logo">ELITE HEALTH CLUB</h5>
                     <p class="mb-2">More than a gym — it's a lifestyle.</p>
                     <div class="social-icons">
-                        <a href="https://www.instagram.com/elitehealthclub/" class="text-gold me-3" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.instagram.com/elitehealthclub/" class="text-gold me-3" target="blank" rel="noopener noreferrer">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="https://www.facebook.com/elitehp/" class="text-gold me-3" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.facebook.com/elitehp/" class="text-gold me-3" target="blank" rel="noopener noreferrer">
                             <i class="fab fa-facebook"></i>
                         </a>
-                        <a href="https://wa.me/27655172764" class="text-gold" target="_blank" rel="noopener noreferrer">
+                        <a href="https://wa.me/27655172764" class="text-gold" target="blank" rel="noopener noreferrer">
                             <i class="fab fa-whatsapp"></i>
                         </a>
                     </div>
