--- a/terms.html
+++ b/terms.html
@@ -280,7 +280,7 @@
         </div>
     </section>
 
-    <!-- Footer -->
+   <!-- Footer -->
     <footer class="footer bg-dark text-gold py-4">
         <div class="container">
             <div class="row">
@@ -288,13 +288,16 @@
                     <h5 class="footer-logo">ELITE HEALTH CLUB</h5>
                     <p class="mb-2">More than a gym — it's a lifestyle.</p>
                     <div class="social-icons">
-                        <a href="https://www.instagram.com/elitehealthclub/" class="text-gold me-3" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.instagram.com/elitehealthclub/" class="text-gold me-3" target="_blank" rel="noopener noreferrer" title="Instagram">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="https://www.facebook.com/elitehp/" class="text-gold me-3" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.facebook.com/elitehp/" class="text-gold me-3" target="_blank" rel="noopener noreferrer" title="Facebook">
                             <i class="fab fa-facebook"></i>
                         </a>
-                        <a href="https://wa.me/27655172764" class="text-gold" target="_blank" rel="noopener noreferrer">
+                        <a href="mailto:elitehcdurban@gmail.com" class="text-gold me-3" title="Email">
+                            <i class="fas fa-envelope"></i>
+                        </a>
+                        <a href="https://wa.me/27655172764" class="text-gold" target="_blank" rel="noopener noreferrer" title="WhatsApp">
                             <i class="fab fa-whatsapp"></i>
                         </a>
                     </div>
