--- a/contact.html
+++ b/contact.html
@@ -269,6 +269,14 @@
                 </div>
             </div>
         </div>
+        <!-- Add to footer/contact page -->
+<div class="newsletter-section">
+    <h4>Stay Elite - Get Fitness Tips</h4>
+    <form id="newsletter-form">
+        <input type="email" placeholder="Your email..." required>
+        <button type="submit">Join Newsletter</button>
+    </form>
+</div>
     </footer>
 
     <!-- Scripts -->
