--- a/join.html
+++ b/join.html
@@ -251,21 +251,20 @@
                             </div>
                         </div>
                         
-                        <!-- Student Membership -->
-                        <div class="col-md-6 col-lg-4 mb-4">
-                            <div class="membership-plan">
-                                <h3 class="plan-title">STUDENT</h3>
-                                <div class="plan-price">R200<span>/month</span></div>
-                                <ul class="plan-features">
-                                    <li>Special student pricing</li>
-                                    <li>Debit order available</li>
-                                    <li>Valid student ID required</li>
-                                    <li>All gym access included</li>
-                                </ul>
-                                <a href="https://wa.me/27655172764?text=Hi! I'm interested in the STUDENT membership (R200/month)" 
-                                   class="btn btn-outline-gold w-100" target="_blank" rel="noopener noreferrer">Choose Student</a>
-                            </div>
-                        </div>
+                       <!-- In join.html - Find Student Membership Plan -->
+<div class="membership-plan">
+    <h3 class="plan-title">STUDENT</h3>
+    <div class="plan-price">R200<span>/month</span></div>
+    <ul class="plan-features">
+        <li>Special student pricing</li>
+        <li>Valid student ID required</li>
+        <li>All gym access included</li>
+    </ul>
+    <!-- CHANGE THIS BUTTON -->
+    <button class="btn btn-outline-gold w-100" onclick="openPaymentDemo('student')">
+        Choose Student - R600 Total
+    </button>
+</div>
 
                         <!-- Pensioner Membership -->
                         <div class="col-md-6 col-lg-4 mb-4">
