--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
     </style>
 </head>
 <body>
-    <!-- CORRECT NAVIGATION FOR ALL PAGES -->
+ <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top custom-navbar">
     <div class="container">
         <a class="navbar-brand" href="index.html">
@@ -72,7 +72,8 @@
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item ms-2">
-                    <a class="btn btn-gold" href="https://wa.me/27655172764" target="_blank" rel="noopener noreferrer">Join Now</a>
+                    <!-- FIXED: Changed from WhatsApp to join.html -->
+                    <a class="btn btn-gold" href="join.html">Join Now</a>
                 </li>
             </ul>
         </div>
