--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         .contact-hero-section {
             height: 60vh;
             background: linear-gradient(rgba(10, 10, 10, 0.8), rgba(212, 175, 55, 0.3)), 
-                        url('images/gym-main.jpg');
+                        url('images/contact-gym.jpg');
             background-size: cover;
             background-position: center;
             display: flex;
