--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         </div>
     </section>
 
-    <!-- Training Videos Section -->
+   <!-- Training Videos Section -->
 <section class="py-5 bg-transparent">
     <div class="container">
         <div class="row justify-content-center text-center">
@@ -271,7 +271,7 @@
                 <!-- Video Carousel -->
                 <div class="video-carousel-container">
                     <div class="video-carousel">
-                        <!-- Video 1 -->
+                        <!-- Video 1 - Gym Vlog -->
                         <div class="video-item">
                             <div class="video-wrapper">
                                 <video muted class="training-video" data-video="1">
@@ -283,12 +283,12 @@
                                 </div>
                             </div>
                             <div class="video-caption">
-                                <h5 class="gold-text">Strength Training</h5>
-                                <p class="text-light">Proper form & technique</p>
+                                <h5 class="gold-text">Gym Tour & Facilities</h5>
+                                <p class="text-light">Explore our premium gym space</p>
                             </div>
                         </div>
                         
-                        <!-- Video 2 -->
+                        <!-- Video 2 - Deadlifts -->
                         <div class="video-item">
                             <div class="video-wrapper">
                                 <video muted class="training-video" data-video="2">
@@ -300,12 +300,12 @@
                                 </div>
                             </div>
                             <div class="video-caption">
-                                <h5 class="gold-text">Cardio Blast</h5>
-                                <p class="text-light">High-intensity interval training</p>
+                                <h5 class="gold-text">Deadlift Training</h5>
+                                <p class="text-light">Proper form & technique</p>
                             </div>
                         </div>
                         
-                        <!-- Video 3 -->
+                        <!-- Video 3 - Deadlifts -->
                         <div class="video-item">
                             <div class="video-wrapper">
                                 <video muted class="training-video" data-video="3">
@@ -317,8 +317,8 @@
                                 </div>
                             </div>
                             <div class="video-caption">
-                                <h5 class="gold-text">Flexibility & Recovery</h5>
-                                <p class="text-light">Stretching and cool-down routines</p>
+                                <h5 class="gold-text">Deadlift Workout</h5>
+                                <p class="text-light">Building strength safely</p>
                             </div>
                         </div>
                     </div>
