--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
                 margin: 0 !important;
             }
             .membership-invite {
-                margin-top: 1rem !important;
+                margin-top: 0.5rem !important;
+                padding-top: 0.5rem !important;
+            }
+            .journey-section {
+                margin-top: -1rem !important;
+                padding-top: 0 !important;
+            }
+            .journey-steps {
+                margin-top: 0.5rem !important;
             }
         }
     </style>
@@ -104,7 +112,7 @@
     <div class="container">
         <div class="row justify-content-center text-center">
             <div class="col-lg-10">
-                <h2 class="section-title mb-3">Your Journey To Elite Starts Here</h2>
+                <!-- REMOVED: "Your Journey To Elite Starts Here" heading -->
                 
                 <!-- UPDATED Journey Steps with Icons -->
                 <div class="journey-steps">
